modules/ops_manager/instance.tf
resource "aws_instance" "ops_manager" {
  ami                    = "${var.ami}"
  instance_type          = "${var.instance_type}"
  key_name               = "${aws_key_pair.ops_manager.key_name}"
  vpc_security_group_ids = ["${aws_security_group.ops_manager_security_group.id}"]
  source_dest_check      = false
  subnet_id              = element("${var.subnet_id}",1)
  iam_instance_profile   = "${aws_iam_instance_profile.ops_manager.name}"

  root_block_device {
    volume_type = "gp2"
    volume_size = 150
  }

  tags = merge(
    var.tags, 
    { "Name" = "${var.env_name}-ops-manager" }
  )
}
